SERVER-47119 Revert SERVER-46571

Replica set configs are now initialized with a term of 0 instead of -1.